<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ctx=".PurchasePlanActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">


        <TextView
            android:id="@+id/no_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/no_data_found"
            android:textSize="18sp"
            android:visibility="gone"
            tools:visibility="visible" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:layout_gravity="end"
                        android:layout_marginStart="20dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:focusable="true"
                        android:padding="5dp"
                        android:src="@drawable/word_logo" />

                    <ImageView
                        android:id="@+id/close_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:focusable="true"
                        android:padding="15dp"
                        app:srcCompat="@drawable/ic_close_black_24dp" />

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="@dimen/spacing_middle"
                    android:layout_marginEnd="30dp"
                    android:text="Access extra feature with premium subscription -"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="@dimen/spacing_xlarge"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_check_circle_blue"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        android:text="@string/unlimited_movies"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_medium"
                        android:drawableLeft="@drawable/ic_check_circle_blue"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        android:text="@string/all_tv_series"
                        android:textSize="16sp"
                        android:visibility="gone"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_medium"
                        android:drawableLeft="@drawable/ic_check_circle_blue"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        android:text="Get all benifits of premium version"
                        android:textSize="16sp" />




                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/pacakge_rv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="25dp"
                    android:nestedScrollingEnabled="false"
                    tools:listitem="@layout/layout_package_item_2" />

            </LinearLayout>


        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>

    <include layout="@layout/google_ads" />

</LinearLayout>